# duckDbData

./: .auto-conda  .conda-environment  .env-setup.md  .envrc  .gitignore  .pre-commit-config.yaml  CRP_SCANNER_README.md  README.md  README_SCANNER_API.md  analytics_e2e_test_plan.md  analytics_test_fix_plan.md  architecture_overview.md  cli.py  comprehensive_test_report.json  config_design.md  config_migration_plan.md  crp_scanner_demo.py  database_integration_plan.md  demo_analytics_report.json  demo_breakout_migration.py  demo_cli_final.py  demo_cli_real_execution.py  demo_cli_scanner.py  demo_crp_migration.py  demo_enhanced_validation.py  demo_performance.db  demo_performance_dashboard.html  demo_performance_monitoring.py  demo_performance_report.json  demo_persistence.py  demo_real_scanner_outcomes.py  demo_results.csv  demo_rule_engine.py  demo_rule_management.py  demo_scanner_outcomes.py  demo_scanner_summary.py  demo_simple_real_scan.py  demo_updated_notebooks.py  docker-compose.yml  end_to_end_backtest.py  (+33 more)
.conda/conda-meta/: bzip2-1.0.8-h99b78c6_7.json  ca-certificates-2025.8.3-hbd8a1cb_0.json  history  icu-75.1-hfee45f7_0.json  libexpat-2.7.1-hec049ff_0.json  libffi-3.4.6-h1da3d7d_1.json  liblzma-5.8.1-h39f12f2_2.json  libsqlite-3.50.4-h4237e3c_0.json  libzlib-1.3.1-h8359307_2.json  ncurses-6.5-h5e97a16_3.json  openssl-3.5.2-he92f556_0.json  pip-25.2-pyh8b19718_0.json  python-3.11.13-hc22306f_0_cpython.json  readline-8.2-h1d1bf99_2.json  setuptools-80.9.0-pyhff2d567_0.json  tk-8.6.13-h892fb3f_2.json  tzdata-2025b-h78e105d_0.json  wheel-0.45.1-pyhd8ed1ab_1.json
.cursor/rules/: spec.mdc
.github/workflows/: ci.yml
.meta/cli_scanner_fixes/: commit_message_t01.md  commit_message_t02.md  commit_message_t03.md  commit_message_t05.md  design.md  diff_review_t01.md  diff_review_t02.md  diff_review_t03.md  diff_review_t05.md  spec.md  steering_notes.md  task_01_test.py  task_02_test.py  task_03_test.py  task_05_test.py  tasks.md  traceability.md
.meta/data-verification-integration/: commit_message.md  design.md  diff_review.md  spec.md  steering_notes.md  tasks.md  traceability.md
.meta/database-verification/: commit_message.md  design.md  diff_review.md  spec.md  steering_notes.md  tasks.md  traceability.md  verification_report.md
.meta/duckdb-performance-optimization/: commit_message.md  design.md  diff_review.md  spec.md  steering_notes.md  tasks.md  traceability.md
.meta/duckdb_integration/: design.md  (+10 more)
analytics/: README.md  __init__.py  requirements.txt  run_dashboard.py  run_traderx.sh
backtesting/: breakout_backtest.py
broker/: Dhan_Tradehull.py  __init__.py  test_20_level_orderbook.py  test_broker_historical_data.py  test_websocket_tick_data.py  tradehull_broker.py
configs/: analytics.yaml  brokers.yaml  config.yaml  config_development.yaml  database.yaml  scanners.yaml
database/: README.md  __init__.py  requirements.txt
docs/: ADOPTION_CHECKLIST.md  ARCHITECTURE.md  CONFIGURATION_SYSTEM.md  DDD_SOLID_DI_AUDIT.md  DUCKDB_FRAMEWORK_README.md  ENHANCED_SCANNER_FRAMEWORK_README.md  PHASE5_README.md  PHASE_STATUS_REPORT.md  README.md  REALTIME_SYNC_IMPLEMENTATION.md  SCANNER_API.md  SYNC_INTERFACES_README.md  TEST_COVERAGE_REPORT.md  test_execution_report.md
examples/: query_technical_indicators.py
frontend_demo/: index.html
scripts/: database_lock_solutions.py  run_tests_safely.py  verify_database_connection.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_config_unified_db.py  test_quick_verification.py  test_runner.py  test_scanner_adapter_unified_db.py  test_scanner_factory_unified_db.py
trade_engine/: README.md  __init__.py  cli.py
(+812 files in other folders)
